--- a/trunk/SampleApplication/EasyInstall/template/scala-2.11/config/ClusterConfig_Template.json
+++ b/trunk/SampleApplication/EasyInstall/template/scala-2.11/config/ClusterConfig_Template.json
@@ -70,6 +70,66 @@
           "Location": "{InstallDirectory}/storage/tenant1_storage_1"
         },
         {
+          "Name": "HelloWorldInput",
+          "TypeString": "Input",
+          "TenantId": "tenant1",
+          "ClassName": "com.ligadata.InputAdapters.KafkaSimpleConsumer$",
+          "JarName": "KamanjaInternalDeps_2.11-1.4.0.jar",
+          "DependencyJars": [
+            "ExtDependencyLibs_2.11-1.4.0.jar",
+            "ExtDependencyLibs2_2.11-1.4.0.jar"
+          ],
+          "AdapterSpecificCfg": {
+            "HostList": "localhost:9092",
+            "TopicName": "helloworldinput"
+          }
+        },
+        {
+          "Name": "MedicalInput",
+          "TypeString": "Input",
+          "TenantId": "tenant1",
+          "ClassName": "com.ligadata.InputAdapters.KafkaSimpleConsumer$",
+          "JarName": "KamanjaInternalDeps_2.11-1.4.0.jar",
+          "DependencyJars": [
+            "ExtDependencyLibs_2.11-1.4.0.jar",
+            "ExtDependencyLibs2_2.11-1.4.0.jar"
+          ],
+          "AdapterSpecificCfg": {
+            "HostList": "localhost:9092",
+            "TopicName": "medicalinput"
+          }
+        },
+        {
+          "Name": "FinanceInput",
+          "TypeString": "Input",
+          "TenantId": "tenant1",
+          "ClassName": "com.ligadata.InputAdapters.KafkaSimpleConsumer$",
+          "JarName": "KamanjaInternalDeps_2.11-1.4.0.jar",
+          "DependencyJars": [
+            "ExtDependencyLibs_2.11-1.4.0.jar",
+            "ExtDependencyLibs2_2.11-1.4.0.jar"
+          ],
+          "AdapterSpecificCfg": {
+            "HostList": "localhost:9092",
+            "TopicName": "financeinput"
+          }
+        },
+        {
+          "Name": "TelecomInput",
+          "TypeString": "Input",
+          "TenantId": "tenant1",
+          "ClassName": "com.ligadata.InputAdapters.KafkaSimpleConsumer$",
+          "JarName": "KamanjaInternalDeps_2.11-1.4.0.jar",
+          "DependencyJars": [
+            "ExtDependencyLibs_2.11-1.4.0.jar",
+            "ExtDependencyLibs2_2.11-1.4.0.jar"
+          ],
+          "AdapterSpecificCfg": {
+            "HostList": "localhost:9092",
+            "TopicName": "telecominput"
+          }
+        },
+        {
           "Name": "TestIn_1",
           "TypeString": "Input",
           "TenantId": "tenant1",
