Pass adapterMessageBindings json file as a command line parameter for migration scripts

--- a/trunk/SampleApplication/ClusterInstall/scala-2.10/MigrateConfig_template.json
+++ b/trunk/SampleApplication/ClusterInstall/scala-2.10/MigrateConfig_template.json
@@ -25,7 +25,8 @@
       "{NewPackageInstallPath}/lib/system/ExtDependencyLibs_{ScalaToVersion}-1.4.0.jar",
       "{NewPackageInstallPath}/lib/system/ExtDependencyLibs2_{ScalaToVersion}-1.4.0.jar"
     ],
-    "tenantId" : "{TenantId}"
+    "tenantId" : "{TenantId}",
+    "adapterMessageBindings" : "{AdapterMessageBidnings}"
   },
   "dataSaveThreshold": 2048,
   "parallelDegree": 16,
