--- a/trunk/SampleApplication/ClusterInstall/scala-2.11/MigrateConfig_template.json
+++ b/trunk/SampleApplication/ClusterInstall/scala-2.11/MigrateConfig_template.json
@@ -26,7 +26,7 @@
       "{NewPackageInstallPath}/lib/system/ExtDependencyLibs2_{ScalaToVersion}-1.4.0.jar"
     ],
     "tenantId" : "{TenantId}",
-    "adapterMessageBindings" : "{AdapterMessageBidnings}"
+    "adapterMessageBindings" : "{AdapterMessageBindings}"
   },
   "dataSaveThreshold": 2048,
   "parallelDegree": 16,
