Added Failed events & Message Events to adapters for sample applications

--- a/trunk/SampleApplication/EasyInstall/template/scala-2.10/config/ClusterConfig_Template.json
+++ b/trunk/SampleApplication/EasyInstall/template/scala-2.10/config/ClusterConfig_Template.json
@@ -175,6 +175,21 @@
           }
         },
         {
+          "Name": "TestMessageEvents_1",
+          "TypeString": "Output",
+          "TenantId": "tenant1",
+          "ClassName": "com.ligadata.OutputAdapters.KafkaProducer$",
+          "JarName": "KamanjaInternalDeps_2.10-1.4.0.jar",
+          "DependencyJars": [
+            "ExtDependencyLibs_2.10-1.4.0.jar",
+            "ExtDependencyLibs2_2.10-1.4.0.jar"
+          ],
+          "AdapterSpecificCfg": {
+            "HostList": "localhost:9092",
+            "TopicName": "testmessageevents_1"
+          }
+        },
+        {
           "Name": "TestStatus_1",
           "TypeString": "Output",
           "TenantId": "System",
