By default we are notifying Engine

--- a/trunk/SampleApplication/EasyInstall/template/scala-2.11/config/MetadataAPIConfig_Template.properties
+++ b/trunk/SampleApplication/EasyInstall/template/scala-2.11/config/MetadataAPIConfig_Template.properties
@@ -7,7 +7,7 @@ SCALA_HOME={ScalaInstallDirectory}
 JAVA_HOME={JavaInstallDirectory}
 MANIFEST_PATH={InstallDirectory}/config/manifest.mf
 CLASSPATH={InstallDirectory}/lib/system/ExtDependencyLibs_2.11-1.4.0.jar:{InstallDirectory}/lib/system/KamanjaInternalDeps_2.11-1.4.0.jar:{InstallDirectory}/lib/system/ExtDependencyLibs2_2.11-1.4.0.jar
-NOTIFY_ENGINE=NO
+NOTIFY_ENGINE=YES
 ZNODE_PATH=/kamanja
 API_LEADER_SELECTION_ZK_NODE=/kamanja
 ZOOKEEPER_CONNECT_STRING=localhost:2181
