add class path to engine config

--- a/trunk/SampleApplication/EasyInstall/template/scala-2.11/config/EngineConfig_Template.properties
+++ b/trunk/SampleApplication/EasyInstall/template/scala-2.11/config/EngineConfig_Template.properties
@@ -5,3 +5,4 @@ nodeId=1
 #########################################
 #MetadataStore information
 MetadataDataStore={"StoreType": "hashmap","SchemaName": "metadata","Location": "{InstallDirectory}/storage"}
+CLASSPATH={InstallDirectory}/lib/system/ExtDependencyLibs_2.11-1.4.1.jar:{InstallDirectory}/lib/system/KamanjaInternalDeps_2.11-1.4.1.jar:{InstallDirectory}/lib/system/ExtDependencyLibs2_2.11-1.4.1.jar
