--- a/trunk/SampleApplication/ClusterInstall/scala-2.11/MigrateConfig_template15.json
+++ b/trunk/SampleApplication/ClusterInstall/scala-2.11/MigrateConfig_template15.json
@@ -10,17 +10,19 @@
     "jars": [
       "{NewPackageInstallPath}/lib/system/migratebase-1.5.0.jar",
       "{NewPackageInstallPath}/lib/system/migratefrom_v_{KamanjaFromVersionWithUnderscore}_{ScalaFromVersion}-1.5.0.jar",
-      "{OldPackageInstallPath}/bin/KamanjaManager-1.0"
+      "{NewPackageInstallPath}/lib/system/KamanjaInternalDeps_{ScalaToVersion}-1.5.0.jar",
+      "{NewPackageInstallPath}/lib/system/ExtDependencyLibs_{ScalaToVersion}-1.5.0.jar",
+      "{NewPackageInstallPath}/lib/system/ExtDependencyLibs2_{ScalaToVersion}-1.5.0.jar"
     ]
   },
   "migratingTo": {
     "version": "1.5.0",
     "scalaVersion": "{ScalaToVersion}",
     "versionInstallPath": "{NewPackageInstallPath}",
-    "implemtedClass": "com.ligadata.Migrate.MigrateTo_V_1_5_0",
+    "implemtedClass": "com.ligadata.Migrate.MigrateTo_V_1_4_1",
     "jars": [
       "{NewPackageInstallPath}/lib/system/migratebase-1.5.0.jar",
-      "{NewPackageInstallPath}/lib/system/migrateto_v_1_5_0_{ScalaToVersion}-1.5.0.jar",
+      "{NewPackageInstallPath}/lib/system/migrateto_v_1_4_1_{ScalaToVersion}-1.5.0.jar",
       "{NewPackageInstallPath}/lib/system/KamanjaInternalDeps_{ScalaToVersion}-1.5.0.jar",
       "{NewPackageInstallPath}/lib/system/ExtDependencyLibs_{ScalaToVersion}-1.5.0.jar",
       "{NewPackageInstallPath}/lib/system/ExtDependencyLibs2_{ScalaToVersion}-1.5.0.jar"
@@ -36,5 +38,6 @@
     "OutputMsgDef"
   ],
   "excludeData": false
+
 }
 
