Fix site import issue

--- a/trunk/SampleApplication/HelloWorld/config/Model_Config_HelloWorld.json
+++ b/trunk/SampleApplication/HelloWorld/config/Model_Config_HelloWorld.json
@@ -1,5 +1,5 @@
 {
-  "HelloWorldModel": {
+  "HelloWorldJythonModel": {
     "Dependencies": [],
     "MessageAndContainers": [
       "com.ligadata.kamanja.samples.messages.msg1",
